package util;

public enum MessageType {
    BROADCAST,
    PRIVATE
}
